2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* gst-libs/gst/rtsp/gstrtspdefs.c:
	  Use WSAGetLastError() rather than errno/h_errno on win32.

2008-11-20  Michael Smith <msmith@songbirdnest.com>

	* gst-libs/gst/riff/riff-media.c:
	  Support WMA Lossless properly.

2008-11-18  David Schleef  <ds@schleef.org>

	* gst/videotestsrc/gstvideotestsrc.c:
	* gst/videotestsrc/gstvideotestsrc.h:
	* gst/videotestsrc/videotestsrc.c:
	* gst/videotestsrc/videotestsrc.h:
	  Add "colorspec" property, specifying whether to generate BT.601
	  or BT.709 video.  This only affects YCbCr values, not RGB, since
	  if you're generating a 709 test pattern, presumably you want
	  709 RGB primaries, not 601.  Also add "smpte75" pattern, which
	  uses 75% colors instead of 100%, since this is often more useful
	  for testing (and also follows the SMPTE EG-1 guideline).

2008-11-18  Alessandro Decina  <alessandro.d@gmail.com>

	* gst/playback/gstdecodebin.c:
	Add a "sink-caps" property to decodebin like it's done for decodebin2.
	Fixes #560380.

2008-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/audioresample/gstaudioresample.c:
	Guard against a NULL dereference I somehow encountered -
	with a FLUSH_STOP arriving either before basetransform _start(),
	or after _stop().

	* gst/typefind/gsttypefindfunctions.c:
	Make sure we never jump backwards when typefinding corrupt mov files.

2008-11-14  Jan Schmidt  <jan.schmidt@sun.com>

	* gst-libs/gst/interfaces/propertyprobe.c:
	Fix random type causing a docs warning.

2008-11-14  Stefan Kost  <ensonic@users.sf.net>

	* sys/v4l/gstv4l.c:
	  Give it a minimal rank for autovideosrc.

2008-11-13  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/typefind/gsttypefindfunctions.c: (jp2_type_find),
	(plugin_init):
	Improve typefinding of ISO JPEG2000 mime types.

2008-11-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* sys/xvimage/xvimagesink.c: (gst_xvimage_buffer_finalize),
	(gst_xvimagesink_xvimage_put), (gst_xvimagesink_setcaps),