@@ -1,6 +1,11 @@
 2008-11-20  Michael Smith <msmith@songbirdnest.com>
 
 	* gst-libs/gst/rtsp/gstrtspdefs.c:
+	  Fix win32 build. Oops.
+
+2008-11-20  Michael Smith <msmith@songbirdnest.com>
+
+	* gst-libs/gst/rtsp/gstrtspdefs.c:
 	  Use WSAGetLastError() rather than errno/h_errno on win32.
 
 2008-11-20  Michael Smith <msmith@songbirdnest.com>
